Adding batch processing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
+server.port=9980
+
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=subscriber-topic
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/STC
+spring.datasource.username=root
+spring.datasource.password=Temp1177
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
